# autoresearch_mlx_mkw

./: .gitignore  LICENSE  README.md  TODO.md  prepare.py  program.md  pyproject.toml  train.py
.github/workflows/: ci.yml
