[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Sovereign MLX port of autoresearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.21.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "huggingface_hub[cli]>=0.23.0",
]

[tool.uv]
managed = true
